agv_ws/log/build_2024-05-04_13-52-10/movement/stderr.log
  File "/home/vboxuser/agv_ws/install/movement/lib/python3.10/site-packages/movement/wheel_controller_server.py", line 103
    print ("W_R: " + str(wheel_speed[0, 0])
          ^
SyntaxError: '(' was never closed

